# conversion-engine

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DEMO_GUIDE.md  DEMO_SCRIPT.md  README.md  ablation_results.json  app.py  baseline.md  main.py  memo.md  method.md  pyproject.toml  render.yaml  requirements.txt  target_failure_mode.md  test_sms.py
agent/: __init__.py  app.py  bench.py  channel_router.py  compose.py  config.py  kill_switch.py  llm.py  main.py  orchestrator.py  tracing.py  webhooks.py
agent/channels/: __init__.py  calcom.py  email.py  hubspot.py  sms.py
agent/enrichment/: __init__.py  ai_maturity.py  brief_generator.py  competitor_gap.py  crunchbase.py  funding.py  jobposts.py  layoffs.py  leadership.py
dashboard/: api.py
dashboard/app/: index.html  package-lock.json  package.json
dashboard/app/src/: App.css  App.jsx
data/: competitor_gap_brief_prospect001.json  competitor_gap_brief_prospect004.json  synthetic_prospects.json
data/seed/: bench_summary.json  case_studies.md  email_sequences.md  icp_definition.md  pricing.json  sector_taxonomy.md  style_guide.md
docs/: architecture.md
eval/: __init__.py  dev_slice.json  evidence_graph.py  held_out_slice.json  latency_summary.json  run_baseline.py  score_log.json  tau2_harness.py
eval/traces/: competitor_gap_brief.json  email_sink.jsonl  evidence_graph.json  held_out_traces.jsonl  sms_sink.jsonl  trace_log.jsonl
pytest-cache-files-fein04e8/v/cache/: nodeids
scripts/: generate_interim_report.py
tests/: test_smoke.py  test_unit.py
