[project]
name = "conversion-engine"
version = "0.1.0"
description = "Tenacious Consulting lead-generation and conversion engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "requests>=2.31",
    "pandas>=2.2",
    "numpy>=1.26",
    "resend>=2.0",
    "africastalking>=1.2",
    "openai>=1.30",
    "anthropic>=0.25",
    "langfuse>=2.20",
    "playwright>=1.42",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "hubspot-api-client>=12.0.0",
]
